# CompilersHometasks

./: CMakeLists.txt  README.md
01-naive-interpreter/: CMakeLists.txt  README.md  driver.cpp  driver.hh  main.cpp  parser.y
02-ast-tree/: CMakeLists.txt  README.md  driver.hh  parser.y
02-ast-tree/AbstractSyntaxTree/: AST.cpp  AST.h  ASTNode.h  Program.cpp  Program.h
02-ast-tree/AbstractSyntaxTree/Expressions/: AddExpression.cpp  AddExpression.h  DivExpression.cpp  DivExpression.h  Expression.h  MulExpression.cpp  MulExpression.h  NumberExpression.cpp  NumberExpression.h  SubExpression.cpp  SubExpression.h  VariableExpression.cpp  VariableExpression.h
02-ast-tree/AbstractSyntaxTree/Statements/: AssignStatement.cpp  AssignStatement.h  DeclarationStatement.cpp  DeclarationStatement.h  PrintStatement.cpp  PrintStatement.h  Statement.h  StatementList.cpp  StatementList.h
03-visitors/: CMakeLists.txt  README.md  driver.cpp  example.java  main.cpp  parser.y  scanner.l
03-visitors/AbstractSyntaxTree/: Program.cpp  Program.h
03-visitors/AbstractSyntaxTree/Expressions/: AddExpression.cpp  BinaryExpression.cpp  DivExpression.cpp  MulExpression.cpp  NumberExpression.cpp  NumberExpression.h  SubExpression.h  VariableExpression.h
03-visitors/AbstractSyntaxTree/Statements/: AssignStatement.cpp  AssignStatement.h  DeclarationStatement.cpp  DeclarationStatement.h  PrintStatement.h  StatementList.cpp
03-visitors/Visitors/: Interpreter.cpp  Interpreter.h  PrintVisitor.cpp  PrintVisitor.h  Visitor.h  declarations.h  includes.h
04-scopes/: CMakeLists.txt  driver.cpp  driver.hh  example.java  example0.java  example2.java  main.cpp  parser.y  source.java  tree.txt
04-scopes/AbstractSyntaxTree/: ASTNode.h
04-scopes/AbstractSyntaxTree/Expressions/: AddExpression.h  BinaryExpression.h  DivExpression.h  Expression.h  MulExpression.h  SubExpression.cpp  VariableExpression.cpp
04-scopes/AbstractSyntaxTree/Statements/: DeclarationStatement.h  PrintStatement.cpp  ScopeStatementList.cpp  ScopeStatementList.h  Statement.h  StatementList.h
04-scopes/Objects/: Integer.cpp  Integer.h  Object.h  UninitObject.h
04-scopes/SymbolTable/: ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h  Symbol.cpp  Symbol.h
04-scopes/Visitors/: Interpreter.cpp  Interpreter.h  PrintVisitor.cpp  PrintVisitor.h  SymbolTreeVisitor.cpp  SymbolTreeVisitor.h  TemplateVisitor.h  Visitor.h  declarations.h  includes.h
